fixed: appearance of question's option on iPhone/Safari
- iPhone/Safari で 問題の選択肢のフォントが小さくなるのをFIXED

--- a/drill/driller/static/exam.css
+++ b/drill/driller/static/exam.css
@@ -88,6 +88,7 @@ span.blank {
 table.opts {
 	border-collapse:collapse;
     margin:10px 10px 10px 30px;
+    -webkit-text-size-adjust: 150%;
 }
 
 .opts th {
